[package]
edition = "2021"
name = "ruc-cheese_srp-big-integer-rs"
version = "0.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "2.12.2", default-features = false, features = ["napi4"] }
napi-derive = "2.12.2"
num-bigint = { version = "0.4.6", features = ["rand"] }
num-traits = "0.2.19"
rand = "0.8.5"

[build-dependencies]
napi-build = "2.0.1"

[profile.release]
lto = true
strip = "symbols"
